# swift-send

./: .env.example.push-notifications  .gitignore  PR_SUMMARY.md  PUSH_NOTIFICATIONS.md  TESTING.md  jest.config.js  package-lock.json  package.json  run-working-tests.sh  test-runner.sh  test-summary.sh  vite.config.ts
.github/workflows/: test.yml
backend/: README.md  jest.config.js  package-lock.json  package.json
backend/migrations/: 002_device_tokens.sql
backend/src/: app.ts  config.ts  container.ts  errors.ts  index.ts
contracts/: Cargo.toml
contracts/access-guard/src/: lib.rs
contracts/recurring-payments/: Cargo.toml
contracts/recurring-payments/src/: lib.rs
contracts/remittance-escrow/src/: lib.rs
public/: firebase-messaging-sw.js
src/: App.tsx
src/components/: ActivityTimeline.tsx  AuthForm.tsx  BalanceCard.tsx  BiometricAuth.tsx  ComparativeInsights.tsx  ComplianceRulesList.tsx  CountryInfoPanel.tsx  CountrySummary.tsx  CurrencyHint.tsx  DownloadReceiptButton.tsx  ErrorBoundary.tsx  FeeBreakdown.tsx  FeeDisplay.tsx  HealthScoreCard.tsx  LanguageSwitcher.tsx  NetworkFeeDisplay.tsx  NetworkStatusIndicator.tsx  NetworkSwitcher.tsx  NotificationCenter.tsx  NotificationFeed.tsx  NotificationInitializer.tsx  OnboardingWallet.tsx  RefundTracker.tsx  RemittanceTracker.tsx  SkeletonLoaders.tsx  SpendingInsightsCard.tsx  StatusBadge.tsx  ThemeToggle.tsx  TransactionItem.tsx  TransactionSigning.tsx  TransferErrorDisplay.tsx  VerificationForm.tsx
src/contexts/: AuthContext.tsx  LanguageContext.tsx  NetworkContext.tsx  WalletContext.tsx
(+143 files in other folders)
