[workspace]
members = [
    "remittance-escrow",
    "wallet-registry",
    "compliance-limits",
    "simple-counter",
    "access-guard",
    "recurring-payments"
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
