[package]
name = "recurring-payments"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.2.1"
stellar-access = "0.5.0"
stellar-contract-utils = "0.5.0"
stellar-macros = "0.5.0"

[dev-dependencies]
soroban-sdk = { version = "23.2.1", features = ["testutils"] }
